<resources>
    <string name="app_name">YogaMyLive</string>
    <string name="yoga_my_live">YOGAmyLIVE</string>
    <string name="welcome">Welcome to YogaMyLive</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="sign_up_with">Sign up with:</string>
    <string name="log_in_with">Log in with:</string>
    <string name="community">Community for people who cant\'t live without yoga</string>
    <string name="privacy">Cookies, Privacy and Terms of Service</string>
    <string name="facebook">Facebook</string>
    <string name="vkontakte">Vkontakte</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="your_name">What\'s your name?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="enter_email">Enter your email address.</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="create_password">Create a password.\nYour password must unclude at least one symbol and be 8 or more characters long.</string>
    <string name="new_password">Enter new password here</string>
    <string name="enter_password">Enter your password</string>
    <string name="action_settings">Settings</string>
    <string name="yoga_leggins">Yoga Leggins</string>
    <string name="mats_3_5_mm">Mats 3.5 mm</string>
    <string name="mats_1_5_mm">Mats 1.5 mm</string>
    <string name="mats_1_0_mm">Mats 1.0 mm</string>
    <string name="towels">Towels</string>
    <string name="hand_towels">Hand Towels</string>
    <string name="mats_bags">Mats Bags</string>
    <string name="yoga_accessories">Yoga Accessories</string>
    <string name="thermos">Thermos</string>
    <string name="size">Size</string>
    <string name="size_xs">XS</string>
    <string name="size_s">S</string>
    <string name="size_m">M</string>
    <string name="size_l">L</string>
    <string name="color">Color</string>
    <string name="add_to_card">Add to Card</string>
    <string name="go_to_card">Go to Card</string>
    <string name="description">Description</string>
    <string name="shipping_info">Shipping Info</string>
    <string name="return_info">Return Info</string>
    <string name="write_a_review">Write a review</string>
    <string name="quantity">Quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="delete">Delete</string>
    <string name="subtotal">SUBTOTAL:</string>
    <string name="check_out">Check Out</string>
    <string name="calculated">Shipping &amp; taxes calculated at checkout</string>
    <string name="shipping_address">Shipping address</string>
    <string name="shipping_address_plus">Shipping address:</string>
    <string name="company">Company (optional)</string>
    <string name="address">Address</string>
    <string name="etc">Apt, suite, etc. (optional)</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state">State/Province</string>
    <string name="zip_code">Zip code</string>
    <string name="phone">Phone (optional)</string>
    <string name="shipping_method">Shipping method</string>
    <string name="post">Post</string>
    <string name="priority">Priority 3\-7 business days</string>
    <string name="express">Express (1\-3 business day)</string>
    <string name="post_price">$ 4.99</string>
    <string name="priority_price">$ 8.91</string>
    <string name="express_price">$ 33.81</string>
    <string name="payment_method">Payment method</string>
    <string name="edit"><u>Edit</u></string>
    <string name="transation">All transactions are secure and encrypted.</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">PayPal</string>
    <string name="yandex_money">Yandex money</string>
    <string name="card_number">Card number</string>
    <string name="name_on_card">Name on card</string>
    <string name="date">MM/YY</string>
    <string name="cw">CW</string>
    <string name="apply">Apply</string>
    <string name="gift_card">Gift card or discount code</string>
    <string name="subtotal_customer">SUBTOTAL</string>
    <string name="shipping">SHIPPING</string>
    <string name="taxes">TAXES</string>
    <string name="free">Free</string>
    <string name="taxes_price">$ 2</string>
    <string name="total">TOTAL</string>
    <string name="continue_payment_method">Continue to payment method</string>
    <string name="orders">Orders</string>
    <string name="support">Support</string>
    <string name="faq">FAQ</string>
    <string name="version">version 1.0.0</string>
    <string name="log_out">Log out</string>
    <string name="delete_account">Delete account</string>
    <string name="bio">Bio</string>
    <string name="about">About</string>
    <string name="write_text">Write text</string>
    <string name="write_topic">Write a topic</string>
    <string name="enter_text">Enter text</string>
    <string name="send">Send</string>
    <string name="help">Help</string>
    <string name="save">Save</string>
    <string name="dollar">$</string>
    <string name="hide">Hide</string>
    <string name="overal_rating">Overal rating</string>
    <string name="recommend">Do you recommended this product?</string>
    <string name="quality">Quality</string>
    <string name="count_comment">0&#8211;300</string>
    <string name="add">Add</string>
    <string name="lang">en</string>
    <string name="customer_reviews">CUSTOMER REVIEWS </string>
    <string name="date_of_purchase">Date of purchase</string>
    <string name="order_id">Order ID</string>
    <string name="status">Status</string>
    <string name="error_login">You entered an incorrect login or password</string>
    <string name="error">Mail is busy</string>
    <string name="facebook_app_id">374990659591184</string>
    <string name="fb_login_protocol_scheme">fb374990659591184</string>
    <integer name="com_vk_sdk_AppId">6307369</integer>
    <string name="card_empty">Shopping card is empty</string>
    <string name="yoga_shop">Yoga Shop</string>
    <string name="yoga_leggins_label">Yoga Leggins</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="customer_info">Customer Info</string>
    <string name="profile">Profile</string>
    <string name="shipping_address_label">Shipping Address</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
