<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.halfway.yogamylife.CustomerInfo">
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_customer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingTop="30dp"
        android:background="@color/white" />
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sv_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_customer"
        android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_shipping_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/shipping_address"/>
        <TextView
            android:id="@+id/tv_customer_first_name"
            android:layout_width="wrap_content"
            android:labelFor="@+id/et_customer_first_name"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="36dp"
            android:textColor="@color/grey"
            android:text="@string/first_name"/>
        <EditText
            android:id="@+id/et_customer_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:inputType="textPersonName"/>
        <TextView
            android:id="@+id/tv_customer_last_name"
            android:labelFor="@+id/et_customer_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="28dp"
            android:textColor="@color/grey"
            android:text="@string/last_name"/>
        <EditText
            android:id="@+id/et_customer_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:inputType="textPersonName"/>
        <TextView
            android:id="@+id/tv_customer_company"
            android:labelFor="@+id/et_customer_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="28dp"
            android:textColor="@color/grey"
            android:text="@string/company"/>
        <EditText
            android:id="@+id/et_customer_company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:inputType="text"/>
        <TextView
            android:id="@+id/tv_customer_address"
            android:labelFor="@+id/et_customer_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="28dp"
            android:textColor="@color/grey"
            android:text="@string/address"/>
        <EditText
            android:id="@+id/et_customer_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="200"
            android:inputType="text"/>
        <TextView
            android:id="@+id/tv_customer_etc"
            android:labelFor="@+id/et_customer_etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="28dp"
            android:textColor="@color/grey"
            android:text="@string/etc"/>
        <EditText
            android:id="@+id/et_customer_etc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="200"
            android:inputType="text"/>
        <TextView
            android:id="@+id/tv_customer_city"
            android:labelFor="@+id/et_customer_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="28dp"
            android:textColor="@color/grey"
            android:text="@string/city"/>
        <EditText
            android:id="@+id/et_customer_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:inputType="text"/>
        <TextView
            android:id="@+id/tv_customer_country"
            android:labelFor="@+id/et_customer_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="28dp"
            android:textColor="@color/grey"
            android:text="@string/country"/>
        <EditText
            android:id="@+id/et_customer_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:inputType="text"/>
        <TextView
            android:id="@+id/tv_customer_province"
            android:labelFor="@+id/et_customer_province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="28dp"
            android:textColor="@color/grey"
            android:text="@string/state"/>
        <EditText
            android:id="@+id/et_customer_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:inputType="text"/>
        <TextView
            android:id="@+id/tv_customer_zip_code"
            android:labelFor="@+id/et_customer_zip_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="28dp"
            android:textColor="@color/grey"
            android:text="@string/zip_code"/>
        <EditText
            android:id="@+id/et_customer_zip_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:inputType="numberDecimal"/>
        <TextView
            android:id="@+id/tv_customer_phone"
            android:labelFor="@+id/et_customer_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="28dp"
            android:textColor="@color/grey"
            android:text="@string/phone"/>
        <EditText
            android:id="@+id/et_customer_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:inputType="phone"/>
        <TextView
            android:id="@+id/tv_shipping_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/shipping_method"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/rg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <RadioButton
                    android:id="@+id/rb_post"
                    android:layout_width="wrap_content"
                    android:layout_height="51dp"
                    android:button="@drawable/checkbox_selector" />
                <RadioButton
                    android:id="@+id/rb_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="51dp"
                    android:button="@drawable/checkbox_selector" />
                <RadioButton
                    android:id="@+id/rb_express"
                    android:layout_width="wrap_content"
                    android:layout_height="51dp"
                    android:button="@drawable/checkbox_selector" />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/rg">
                <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <TextView
                android:id="@+id/tv_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:textSize="14sp"
                android:text="@string/post"
                android:layout_centerVertical="true"/>
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:textSize="14sp"
                android:layout_centerVertical="true"
                android:text="@string/post_price"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">
                    <TextView
                        android:id="@+id/tv_priority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:textSize="14sp"
                        android:text="@string/priority"
                        android:layout_centerVertical="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:textSize="14sp"
                        android:layout_centerVertical="true"
                        android:text="@string/priority_price"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">
                    <TextView
                        android:id="@+id/tv_express"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:textSize="14sp"
                        android:text="@string/express"
                        android:layout_centerVertical="true"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:textSize="14sp"
                        android:layout_centerVertical="true"
                        android:text="@string/express_price"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
        <Button
            android:id="@+id/btn_payment"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/color"
            android:textSize="14sp"
            android:text="@string/payment_method"
            android:clickable="true"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
