<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="449dp"
    android:padding="16dp"
    android:background="@color/white">
    <ImageView
        android:id="@+id/bs_product_photo"
        android:layout_width="119dp"
        android:layout_height="137dp" />
    <TextView
        android:id="@+id/bs_product_title"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_toEndOf="@+id/bs_product_photo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="45dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/bs_product_price"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_toEndOf="@+id/bs_product_photo"
        android:layout_below="@+id/bs_product_title"
        android:layout_marginStart="10dp"
        android:textSize="24sp"
        android:textColor="@color/black"/>
    <RelativeLayout
        android:id="@+id/bs_rl_size"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/bs_product_photo"
        android:layout_marginTop="7dp">
        <TextView
            android:id="@+id/bs_tv_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/size"/>
        <TextView
            android:id="@+id/bs_tv_size_xs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/bs_tv_size_s"
            android:text="@string/size_xs"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:clickable="true"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="13dp"/>
        <TextView
            android:id="@+id/bs_tv_size_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/bs_tv_size_m"
            android:layout_marginEnd="28dp"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:clickable="true"
            android:text="@string/size_s"
            android:layout_marginTop="13dp"/>
        <TextView
            android:id="@+id/bs_tv_size_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/bs_tv_size_l"
            android:layout_marginEnd="28dp"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:clickable="true"
            android:text="@string/size_m"
            android:layout_marginTop="13dp"/>
        <TextView
            android:id="@+id/bs_tv_size_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/size_l"
            android:clickable="true"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="13dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/bs_rl_color"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/bs_rl_size">
        <TextView
            android:id="@+id/bs_tv_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/color"/>
        <Button
            android:id="@+id/bs_btn_color"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="13dp"
            android:background="@drawable/rounded_button"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/bs_rl_quantity"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/bs_rl_color">
        <TextView
            android:id="@+id/bs_tv_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/quantity"/>
        <TextView
            android:id="@+id/bs_tv_quantity_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/tv_quantity_count"
            android:text="@string/minus"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:clickable="true"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="13dp"/>
        <TextView
            android:id="@+id/tv_quantity_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/bs_tv_quantity_plus"
            android:layout_marginEnd="28dp"
            android:textSize="16sp"
            android:textColor="@color/grey"
            android:text="@string/size_s"
            android:layout_marginTop="13dp"/>
        <TextView
            android:id="@+id/bs_tv_quantity_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/plus"
            android:clickable="true"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="13dp"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_go_to_card"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="9dp"
        android:background="@color/color"
        android:textSize="16sp"
        android:layout_below="@+id/bs_rl_quantity"
        android:text="@string/go_to_card"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/btn_continue_shopping"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/btn_go_to_card"
        android:background="@drawable/rounded_review"
        android:layout_marginBottom="17dp"
        android:text="@string/continue_shopping"
        android:textSize="14sp"
        android:textAllCaps="false"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:visibility="gone"/>

</RelativeLayout>