<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.halfway.yogamylife.MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/loopergroupcopy5"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/darke_grey"
            android:textSize="24pt"
            android:fontFamily="Roboto"
            android:layout_marginTop="120dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="18dp"
            android:layout_below="@id/text_view_home"
            android:textSize="8pt"
            android:textColor="@color/grey"
            android:text="@string/community"/>
        <TextView
            android:id="@+id/tv_privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="34dp"
            android:textColor="@color/grey"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp"
            android:text="@string/privacy"/>
        <Button
            android:id="@+id/btn_log_in"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:layout_above="@+id/tv_privacy"
            android:background="@drawable/rounded_log"
            android:text="@string/log_in"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_above="@+id/btn_log_in"
            android:background="@drawable/rounded"
            android:textColor="@color/white"
            android:text="@string/sign_up"
            android:textAllCaps="false" />
    </RelativeLayout>

</FrameLayout>
