<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.halfway.yogamylife.Support">
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_support"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingTop="30dp"
        android:background="@color/white" />
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_support"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">
        <TextView
            android:labelFor="@+id/et_write_topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/grey"
            android:text="@string/write_topic"/>
        <EditText
            android:id="@+id/et_write_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="50"
            android:inputType="text"/>
        <EditText
            android:id="@+id/et_enter_text"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:inputType="textMultiLine"
            android:maxLength="500"
            android:hint="@string/enter_text"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:background="@color/color"
            android:textSize="14sp"
            android:text="@string/send"
            android:clickable="true"
            android:textColor="@color/white"/>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
